--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,22 @@
 version: '3'
 services:
-  opa-firewall:
-    image: cosmtrek/air
+  policy-generator:
+    depends_on:
+      - kafka
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
     environment:
-      DD_AGENT_HOST: statsd
+      KPROXY_KAFKA: kafka
+      SECURITY_PROTOCOL: SASL_PLAINTEXT
+      SASL_MECHANISM: PLAIN
+      SASL_PLAIN_USERNAME: admin
+      SASL_PLAIN_PASSWORD: admin-secret
+      DEBUG: "true"
     volumes:
       - ${PWD}/:/go/src/github.com/cainelli/opa-firewall
     working_dir: /go/src/github.com/cainelli/opa-firewall/
-    command: "-c ./config/development/air.conf"
+    command: "-c ./config/development/air-policy-generator.conf"
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
@@ -15,7 +24,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     extra_hosts:
       - "moby:127.0.0.1"
-
+    logging:
+      driver: "none"
   kafka:
     image: confluentinc/cp-kafka:latest
     ports:
@@ -37,3 +47,5 @@ services:
       ZOOKEEPER_SASL_ENABLED: "false"
     extra_hosts:
       - "moby:127.0.0.1"
+    logging:
+      driver: "none"
